Fix card going edge to edge on small screens
The card's max-width now uses the min() function with 90% as one of its
arguments to prevent it from occupying the entire viewport width on
devices with small screens.

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ main {
 
 .user-card {
   margin-block: auto;
-  max-width: 23.4375rem;
+  max-width: min(90%, 23.4375rem);
 
   text-align: center;
 
